# mc-sources

./: Cargo.toml  README.md
src/: lib.rs  modrinth.rs  version.rs
src/fabric/: mod.rs
src/forge/: mod.rs
src/hangar/: mod.rs
src/mclogs/: mod.rs
src/papermc/: impls.rs  mod.rs  structs.rs
src/purpurmc/: mod.rs
src/quilt/: mod.rs
src/vanilla/: assets.rs  manifest.rs  mod.rs  version.rs
