[package]
name = "mcapi"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
thiserror = "1.0.40"
os-version = "0.2.0"
regex = "1.8"
roxmltree = "0.18.0"
