[package]
name = "mcapi"
version = "0.2.0"
edition = "2021"

[lints.clippy]
all = "deny"
pedantic = "warn"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"

[dependencies]
lazy_static = "1.4"
os_info = { version = "3.7", default-features = false }
regex = "1.10"
reqwest = { version = "0.11", features = [
    "json",
    "stream",
    "rustls-tls",
], default-features = false }
roxmltree = "0.19"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
